Layout of add restructuring started

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,4 +38,5 @@
     <string name="buttonHome">Navigate to Home</string>
     <string name="title_profile">Logged In User</string>
     <string name="FoodRater">FoodRater</string>
+    <string name="helpTitle">Help Screen</string>
 </resources>
